# scrap

./: Cargo.toml
src/: lib.rs
src/common/: dxgi.rs  mod.rs  quartz.rs  x11.rs
src/dxgi/: mod.rs
src/quartz/: capturer.rs  display.rs  frame.rs
src/x11/: capturer.rs  display.rs  iter.rs  server.rs
